[gd_scene load_steps=13 format=2]

[ext_resource path="res://Globals/SFXManager.gd" type="Script" id=1]
[ext_resource path="res://SFX/button.wav" type="AudioStream" id=2]
[ext_resource path="res://SFX/collect mine.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/enemy shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/enter to black hole.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/health crate.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/hit.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/asteroid.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/bomb.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/shield crate.wav" type="AudioStream" id=10]
[ext_resource path="res://SFX/ship explosion.wav" type="AudioStream" id=11]
[ext_resource path="res://SFX/player shoot.wav" type="AudioStream" id=12]

[node name="SFXManager" type="Node"]
script = ExtResource( 1 )

[node name="asteroid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="bomb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="collect_mine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="enemy_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="enter_to_black_hole" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="health_crate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="player_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="shield_crate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="ship_explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
