extends Node

#warning-ignore:unused_class_variable
onready var asteroid = $asteroid
#warning-ignore:unused_class_variable
onready var bomb = $bomb
#warning-ignore:unused_class_variable
onready var button = $button
#warning-ignore:unused_class_variable
onready var collect_mine = $collect_mine
#warning-ignore:unused_class_variable
onready var enemy_shoot = $enemy_shoot
#warning-ignore:unused_class_variable
onready var enter_to_black_hole = $enter_to_black_hole
#warning-ignore:unused_class_variable
onready var health_crate = $health_crate
#warning-ignore:unused_class_variable
onready var hit = $hit
#warning-ignore:unused_class_variable
onready var player_shoot = $player_shoot
#warning-ignore:unused_class_variable
onready var shield_crate = $shield_crate
#warning-ignore:unused_class_variable
onready var ship_explosion = $ship_explosion
